Support joining a singular association by path from its parent